03-resolucao-desafios/DESAFIO05/network.tf
resource "google_compute_network" "tf-vpc-lab" {
  name = var.vpc_name

  auto_create_subnetworks = var.vpc_gerenciada
}
